--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Researcher
-url: "https://ankitsultana.com"
-baseurl: "/researcher"
+title: Shakhawat Hossain
+url: "https://0xshakhawat.github.io/portfoliotest/"
+baseurl: "/"
 
 markdown: kramdown
 #ins_logo: "./bits-logo.png"
