--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Shakhawat Hossain
 url: "https://Shakhawat.me/"
-baseurl: "/"
+baseurl: "/portfoliotest"
 
 markdown: kramdown
 #ins_logo: "./bits-logo.png"
