--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sass:
 
 nav:
  - name: "About"
-   link: "/"
+   link: "/portfoliotest"
  - name: "Blog"
    link: "https://blog.shakhawat.me"
  - name: "Contact"
